feat: add first-pass auth and partition acl
